# Creating_a_Voxel_Engine

./: Cargo.toml
src/: camera.rs  main.rs  player.rs  scene.rs  settings.rs  shader_program.rs  textures.rs
src/meshes/: base_mesh.rs  chunk_mesh.rs  chunk_mesh_builder.rs  mod.rs  quad_mesh.rs
src/shaders/: chunk.frag  chunk.vert  quad.vert
src/world_objects/: chunk.rs
