[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
nalgebra-glm = "0.18.0"
image = "0.24.6"
noise = "0.8.2"

[dependencies.sdl2]
version = "0.35.2"
default-features = false
features = ["ttf", "image", "mixer", "gfx"]